--- a/atividade1.ipynb
+++ b/atividade1.ipynb
@@ -1360,9 +1360,11 @@
     "Proporção de Lendários (População Total): 8.12%\n",
     "Proporção de Lendários (Amostra de 50): 4.00%\n",
     "\n",
+    "\n",
     "Vemos que as estatísticas de HP ficaram próximas, com uma variação um pouco maior para Attack e da Proporção Lendários.\n",
     "\n",
-    "Com uma amostra muito pequena, eu es"
+    "Com uma amostra muito pequena, é esperado que as estatísticas da amostra sejam extremamente distorcidas em relação à população.\n",
+    "Tanto que, existem técnicas de estimação de tamanho de amostra a ser analisada considerando se sabemos ou não o tamanho da população."
    ]
   }
  ],
