--- a/atividade1.ipynb
+++ b/atividade1.ipynb
@@ -1480,6 +1480,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e5a83159",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Geração 1:\n",
+      "Média de HP: 65.82\n",
+      "Média de Attack: 76.64\n",
+      "Média de Defense: 70.86\n",
+      "Geração 2:\n",
+      "Média de HP: 71.21\n",
+      "Média de Attack: 72.03\n",
+      "Média de Defense: 73.39\n",
+      "Geração 3:\n",
+      "Média de HP: 66.54\n",
+      "Média de Attack: 81.62\n",
+      "Média de Defense: 74.10\n",
+      "Geração 4:\n",
+      "Média de HP: 73.08\n",
+      "Média de Attack: 82.87\n",
+      "Média de Defense: 78.13\n",
+      "Geração 5:\n",
+      "Média de HP: 71.79\n",
+      "Média de Attack: 82.07\n",
+      "Média de Defense: 72.33\n",
+      "Geração 6:\n",
+      "Média de HP: 68.27\n",
+      "Média de Attack: 75.80\n",
+      "Média de Defense: 76.68\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Questão 7\n",
+    "\n",
+    "for gen in range(1, 7):  # Supondo que haja 6 gerações\n",
+    "    print(f'Geração {gen}:')\n",
+    "    media_hp = df_pokemon[df_pokemon['Generation'] == gen]['HP'].mean()\n",
+    "    print(f'Média de HP: {media_hp:.2f}')\n",
+    "    media_hp = df_pokemon[df_pokemon['Generation'] == gen]['Attack'].mean()\n",
+    "    print(f'Média de Attack: {media_hp:.2f}')\n",
+    "    media_hp = df_pokemon[df_pokemon['Generation'] == gen]['Defense'].mean()\n",
+    "    print(f'Média de Defense: {media_hp:.2f}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6186ed08",
+   "metadata": {},
+   "source": [
+    "Questão 7\n",
+    "\n",
+    "Defense: Vemos uma tendência de aumento, com um uma queda, seguido de um aumento que o coloca na sexta geração ainda acima da primeira\n",
+    "HP: É nítida uma alternância entre as gerações iniciais com uma tendência de queda nas finais\n",
+    "Attack: Em duas gerações, valores abaixo do valor da geração 1, com três gerações acima, terminando abaixo do início\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "311f6799",
    "metadata": {},
