--- a/atividade1.ipynb
+++ b/atividade1.ipynb
@@ -1540,7 +1540,8 @@
     "Defense: Vemos uma tendência de aumento, com um uma queda, seguido de um aumento que o coloca na sexta geração ainda acima da primeira\n",
     "HP: É nítida uma alternância entre as gerações iniciais com uma tendência de queda nas finais\n",
     "Attack: Em duas gerações, valores abaixo do valor da geração 1, com três gerações acima, terminando abaixo do início\n",
-    "\n"
+    "\n",
+    "A primeira geração introduziu mais pokémons"
    ]
   },
   {
